tests/tests.txt
Expected failing - mangled function definition
fndef.ke
error[E001]: Invalid or unexpected token (expected 'lparen', got 'lcurly').
./tests/fndef.ke:1:5
1 | fn x{
  |     ^
=-=
Expected failing - overlapping immutable references
irefoverlap.ke
error[E009]: Binding 'x' has multiple immutable references.
./tests/irefoverlap.ke:4:13
4 |     let z = &y
  |             ^^         
First reference here.
./tests/irefoverlap.ke:3:13
3 |     let y = &x
  |             ^^
=-=
Expected failing - test E018
E018.keerror[E018]: Cannot deref non-reference type 'std::i32'.
./tests/E018.ke:5:13
5 |     let _ = *x
  |             ^^  